--- a/my-medusa-store/Dockerfile
+++ b/my-medusa-store/Dockerfile
@@ -3,7 +3,7 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Cài đặt các thư viện cần thiết cho hệ thống (Python, make, g++ cho native modules)
+# Cài đặt các thư viện cần thiết
 RUN apk add --no-cache libc6-compat python3 make g++
 
 COPY package.json package-lock.json ./
@@ -13,7 +13,7 @@ RUN npm ci
 
 COPY . .
 
-# Build Medusa (Lệnh này sẽ tự động build cả Admin Dashboard)
+# Build Medusa
 RUN npm run build
 
 # Stage 2: Production Runner
@@ -23,7 +23,7 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
-# Cài libc6-compat để chạy ổn định trên Alpine
+# Cài libc6-compat
 RUN apk add --no-cache libc6-compat
 
 # Copy node_modules và source đã build từ builder
@@ -31,12 +31,14 @@ COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/.medusa ./.medusa
 COPY --from=builder /app/package.json ./package.json
 
-# Copy các file config quan trọng
+# Copy file config
 COPY --from=builder /app/medusa-config.ts ./medusa-config.ts
-# Nếu bạn có file .env.template thì copy vào, nhưng KHÔNG copy .env thật
+
+# 👇👇👇 DÒNG NÀY LÀ DÒNG BẠN ĐANG THIẾU 👇👇👇
+COPY --from=builder /app/tsconfig.json ./tsconfig.json
 
 # Port mặc định
 EXPOSE 9000
 
-# Lệnh chạy server (KHÔNG chạy migration ở đây để an toàn)
+# Lệnh chạy server
 CMD ["npm", "run", "start"]
