Fix: Correct path for Admin build folder

--- a/my-medusa-store/Dockerfile
+++ b/my-medusa-store/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 # Cài đặt thư viện hệ thống
 RUN apk add --no-cache libc6-compat python3 make g++
-
+ 
 COPY package.json package-lock.json ./
 
 # Cài đặt dependencies
@@ -13,7 +13,7 @@ RUN npm ci
 
 COPY . .
 
-# Build Medusa (Tạo ra .medusa và thư mục build chứa Admin)
+# Build Medusa (Admin sẽ được build vào .medusa/admin)
 RUN npm run build
 
 # Stage 2: Production Runner
@@ -29,19 +29,19 @@ RUN apk add --no-cache libc6-compat
 # Copy node_modules
 COPY --from=builder /app/node_modules ./node_modules
 
-# Copy Backend Core
+# Copy Backend Core (.medusa chứa cả server và admin)
 COPY --from=builder /app/.medusa ./.medusa
 COPY --from=builder /app/package.json ./package.json
 
 # Copy Config
 COPY --from=builder /app/medusa-config.ts ./medusa-config.ts
 COPY --from=builder /app/tsconfig.json ./tsconfig.json
-
-# 👇👇👇 BỔ SUNG QUAN TRỌNG TẠI ĐÂY 👇👇👇
-# Copy thư mục public (nơi chứa assets tĩnh)
 COPY --from=builder /app/public ./public
-# Copy thư mục build (nơi chứa giao diện Admin Dashboard)
-COPY --from=builder /app/build ./build
+
+# 👇👇👇 SỬA ĐỔI QUAN TRỌNG TẠI ĐÂY 👇👇👇
+# Thay vì copy /app/build (không tồn tại), ta copy từ /app/.medusa/admin
+# Server sẽ tưởng đây là thư mục build và chạy file index.html trong đó
+COPY --from=builder /app/.medusa/admin ./build
 
 # Port
 EXPOSE 9000
