--- a/my-medusa-store/Dockerfile
+++ b/my-medusa-store/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 # Cài đặt thư viện hệ thống
 RUN apk add --no-cache libc6-compat python3 make g++
- 
+
 COPY package.json package-lock.json ./
 
 # Cài đặt dependencies
@@ -13,7 +13,7 @@ RUN npm ci
 
 COPY . .
 
-# Build Medusa (Admin sẽ được build vào .medusa/admin)
+# Build Medusa (Admin sẽ được tạo ra tại .medusa/client)
 RUN npm run build
 
 # Stage 2: Production Runner
@@ -29,7 +29,7 @@ RUN apk add --no-cache libc6-compat
 # Copy node_modules
 COPY --from=builder /app/node_modules ./node_modules
 
-# Copy Backend Core (.medusa chứa cả server và admin)
+# Copy Backend Core
 COPY --from=builder /app/.medusa ./.medusa
 COPY --from=builder /app/package.json ./package.json
 
@@ -39,9 +39,8 @@ COPY --from=builder /app/tsconfig.json ./tsconfig.json
 COPY --from=builder /app/public ./public
 
 # 👇👇👇 SỬA ĐỔI QUAN TRỌNG TẠI ĐÂY 👇👇👇
-# Thay vì copy /app/build (không tồn tại), ta copy từ /app/.medusa/admin
-# Server sẽ tưởng đây là thư mục build và chạy file index.html trong đó
-COPY --from=builder /app/.medusa/admin ./build
+# Lấy Admin từ .medusa/client và copy ra thành thư mục build để Server nhận diện
+COPY --from=builder /app/.medusa/client ./build
 
 # Port
 EXPOSE 9000
