--- a/EcommerceProject/.env
+++ b/EcommerceProject/.env
@@ -2,7 +2,7 @@
 REACT_APP_BACKEND_URL=https://lie-clearly-atom-arise.trycloudflare.com
 
 # Google OAuth callback URL
-
+REACT_APP_GOOGLE_CALLBACK=http://localhost:3000/auth/google/callback
 
 # .env (Trong dự án React)
 # --- Bắt buộc ---
