--- a/EcommerceProject/.env
+++ b/EcommerceProject/.env
@@ -14,6 +14,7 @@ REACT_APP_MEDUSA_PUBLISHABLE_KEY=pk_d4bf2faebacb69611013a1fd3c32bb8f76ab55d06f20
 # ID khu vực Medusa (Bắt buộc cho các route Store API khác)
 REACT_APP_MEDUSA_REGION_ID=reg_01K73N9QAJJ6DVF7FGKAKCJQG0
 # --- Tùy chọn ---
+REACT_APP_PAYMENT_URL=https://politics-cuts-erik-petroleum.trycloudflare.com 
 # Thay thế bằng Public Key/User ID của bạn
 REACT_APP_EMAILJS_PUBLIC_KEY="YKrBEa714vvKWx0pv"
 
