--- a/EcommerceProject/.env
+++ b/EcommerceProject/.env
@@ -8,7 +8,7 @@ REACT_APP_GOOGLE_CALLBACK=http://localhost:3000/auth/google/callback
 
 # .env (Trong dự án React)
 # --- Bắt buộc ---
-REACT_APP_MEDUSA_BACKEND_URL=https://kentucky-reasons-launches-four.trycloudflare.com/
+REACT_APP_MEDUSA_BACKEND_URL=http://localhost:9000
 
 
 # Khóa API Publishable Key (Bắt buộc cho các route Store API khác)
@@ -25,3 +25,5 @@ REACT_APP_EMAILJS_SERVICE_ID="service_ptcml85"
 
 # Thay thế bằng Template ID của Template "Contact Us"
 REACT_APP_EMAILJS_TEMPLATE_ID="template_0s1zehj"
+
+REACT_APP_PAYMENT_URL=http://localhost:8888
