--- a/my-medusa-store/docker-compose.yml
+++ b/my-medusa-store/docker-compose.yml
@@ -39,13 +39,14 @@ services:
       - "9000:9000"
     environment:
       - NODE_ENV=development
-      - DATABASE_URL=postgres://postgres:postgres@100.65.202.126:5433/medusa_store
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/medusa_store
       - REDIS_URL=redis://redis:6379
     env_file:
       - .env
     volumes:
       - .:/app
       - /app/node_modules
+      - /app/.medusa      
     networks:
       - medusa_network_ecommerce
 
