--- a/EcommerceProject/.env
+++ b/EcommerceProject/.env
@@ -18,12 +18,12 @@ REACT_APP_MEDUSA_PUBLISHABLE_KEY=pk_d4bf2faebacb69611013a1fd3c32bb8f76ab55d06f20
 REACT_APP_MEDUSA_REGION_ID=reg_01K73N9QAJJ6DVF7FGKAKCJQG0
 # --- Tùy chọn ---
 # Thay thế bằng Public Key/User ID của bạn
-REACT_APP_EMAILJS_PUBLIC_KEY="YKrBEa714vvKWx0pv"
+REACT_APP_EMAILJS_PUBLIC_KEY="IkIsJMiMuueKLvbRA"
 
 # Thay thế bằng Service ID của bạn (ví dụ: service_ptcml85)
-REACT_APP_EMAILJS_SERVICE_ID="service_ptcml85"
+REACT_APP_EMAILJS_SERVICE_ID="service_53qedmh"
 
 # Thay thế bằng Template ID của Template "Contact Us"
-REACT_APP_EMAILJS_TEMPLATE_ID="template_0s1zehj"
+REACT_APP_EMAILJS_TEMPLATE_ID="template_4fw6q9p"
 
 REACT_APP_PAYMENT_URL=http://localhost:8888
