--- a/EcommerceProject/package.json
+++ b/EcommerceProject/package.json
@@ -22,6 +22,7 @@
     "react-jwt": "^1.3.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.4",
