--- a/EcommerceProject/package.json
+++ b/EcommerceProject/package.json
@@ -6,6 +6,7 @@
     "@emailjs/browser": "^4.4.1",
     "@medusajs/js-sdk": "^2.10.3",
     "@medusajs/medusa-js": "^6.1.10",
+    "@reduxjs/toolkit": "^2.11.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -20,8 +21,10 @@
     "react-dom": "^19.1.1",
     "react-icons": "^4.12.0",
     "react-jwt": "^1.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.4",
