--- a/my-medusa-store/docker-compose.yml
+++ b/my-medusa-store/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     environment:
       # Đây là link Frontend (Web bán hàng) của bạn trên Cloudflare
       # Thay bằng link thực tế bạn đang có
-      - FRONTEND_URL=http://localhost:3000 
+      - FRONTEND_URL=https://my-ecommerce-project-rose.vercel.app
     networks:
       - medusa_network_ecommerce
 
